# Shibboleth-Threat-Detection

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE.md  README.md  app.py  config.yml  create_synthetic_data.py  db_helper.py  docker-compose.yml  ensembler.py  geoip_helper.py  globals.py  heuristics_helper.py  model.py  nn_helper.py  pyproject.toml  rba-metrics.js  requirements-docker.txt  requirements.txt  stopforumspam_helper.py  train.py  train_nn.py
db/: bootstrap_scores.py  create_synthetic_data.py  db_helper.py
external_data/: geoip_helper.py  stopforumspam_helper.py
helpers/: device_classifier.py  globals.py  mlflow_helper.py  shib_updater.py  verify_config_usage.py
nn_scripts/: calibrator.py  ensembler.py  explain_nn.py  feature_preprocessor.py  model.py  nn_helper.py  train_nn.py  update_shib.py
seeds/v1/: v1_rba_device.sql  v1_rba_login_event.sql  v1_rba_scores.sql
seeds/v3/: v3_rba_device.sql  v3_rba_login_event.sql  v3_rba_scores.sql
seeds/v4/: v4_rba_device.sql  v4_rba_login_event.sql  v4_rba_scores.sql
web/: app.py  run_api.py
