[project]
name = "shibboleth-threat-detection"
version = "2.1.0"
description = "A risk based authentication implementation designed for Shibboleth IdP"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "geoip2",
    "gunicorn",
    "joblib",
    "matplotlib",
    "mlflow",
    "numpy",
    "openpyxl",
    "pandas",
    "pandas-stubs",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "scikit-learn",
    "scipy-stubs",
    "sqlalchemy",
    "torch",
    "user-agents",
    "waitress",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["web*", "nn_scripts*", "db*", "helpers*", "external_data*"]
exclude = ["tests*", "seeds*", "geoip_data*", "stopforumspam_data*", "nn_data*"]

[tool.poetry]
packages = [
    { include = "web" },
    { include = "nn_scripts" },
    { include = "db" },
    { include = "helpers" },
    { include = "external_data" },
]

[project.scripts]
api = "web.app:main"
api-prod = "web.run_api:main"
train = "nn_scripts.train_nn:main"
